--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -8,5 +8,11 @@
     <h1>{{ first }} {{ last }}</h1>
 
     <p>GitHub Account: {{ github }}</p>
+
+    <ul id="grades_list">
+        {% for tup in rows %}
+            <li>{{ tup }}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
